--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,25 @@
 server.port=9090
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/PhysicalHealth
-spring.datasource.username=postgres
-spring.datasource.password=2000
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
 
+spring.h2.console.path=/h2
 
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/PhysicalHealth
+#spring.datasource.username=postgres
+#spring.datasource.password=2000
+#
+#
+### default connection pool
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
