--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,12 @@ spring.h2.console.enabled=true
 #
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+#spring.resources.static-locations=classpath:/resources/css/
+
+spring.mvc.static-path-pattern=/resources/**
+
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+spring.thymeleaf.cache=false
