--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.example</groupId>
-    <artifactId>PhysicalHealth</artifactId>
+    <artifactId>PhysicalHealthApp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eShop</name>
     <description>eShop</description>
