--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 server.port=9090
 ## PostgreSQL
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-
+spring.datasource.url=jdbc:h2:mem:physicalHealth;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=filip
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.h2.console.path=/h2
 
 spring.jpa.show-sql=true
